# jeeves

./: .gitignore  CMakeLists.txt  makefile  solution.cmd
doc/: accounts.md  autoexec.cfg  imgui.ini  notes.md
res/: netvars.txt  qis.afdesign  resource.h  resource.rc
src/: main.cpp  module.cpp  module.h
src/code/: code.cpp  code.h  input.cpp  input.h  loader.cpp  loader.h  main.cpp
src/csgo/: hook.h  math.h  netvars.cpp  netvars.h  sdk.cpp  sdk.h  xorstr.h
src/csgo/sdk/: CGlobalVarsBase.h  CHandle.h  CInput.h  CRC.cpp  CRC.h  ClientClass.h  Color.h  Common.h  IAppSystem.h  IBaseClientDll.h  IClientEntity.h  IClientEntityList.h  IClientMode.h  IClientNetworkable.h  IClientRenderable.h  IClientThinkable.h  IClientUnknown.h  IConVar.h  ICvar.h  IEngineTrace.h  IEngineVGui.h  IHandleEntity.h  IPanel.h  ISurface.h  IVEngineClient.h  PlayerInfo.h  QAngle.h  Recv.h  UtlBuffer.cpp  UtlBuffer.h  UtlMemory.h  UtlString.cpp  UtlString.h  UtlVector.h  VMatrix.cpp  VMatrix.h  Vector.cpp  Vector.h  Vector2D.cpp  Vector2D.h  (+4 more)
src/os/: application.h  options.h  process.h
